feat: fim aula 1

--- a/html/aula01/index.html
+++ b/html/aula01/index.html
@@ -1,23 +1,214 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Aula 01 - HTML">
-    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Aula 01 - HTML" />
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aula 01 - Introdução ao HTML</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon" />
+  </head>
+  <body>
     <header>
-        
-        <h1> <span class="material-symbols-outlined">
-            home
-            </span>Título da página</h1>
+      <h1>
+        <span class="material-symbols-outlined"> home </span>Título da página
+      </h1>
     </header>
-    <p>Primeiro parágrafo</p>
 
-</body>
+    <h1>Título 1</h1>
+    <h2>Título 2</h2>
+    <h3>Título 3</h3>
+    <h4>Título 4</h4>
+    <h5>Título 5</h5>
+    <h6>Título 6</h6>
+
+    <h3 id="sobre">SOBRE</h3>
+    <p >
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero!
+    </p>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero!
+    </p>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero!
+    </p>
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero! Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. <br />
+      Praesentium alias saepe, quos voluptas cum aspernatur est temporibus
+      porro, laborum nihil mollitia maiores tempore doloribus aperiam a
+      excepturi numquam voluptate libero!
+    </p>
+
+    <hr />
+    <h3>LINKS</h3>
+    <a href="https://www.w3schools.com/html/">W3 Schools - HTML</a>
+
+    <a href="#sobre">SOBRE</a>
+
+
+    <ol>
+        <h4>Lista Ordenana Numerica:</h4>
+        <li>Arroz</li>
+        <li>Feijão</li>
+        <li>Batata</li>
+    </ol>
+
+    <ol type="A">
+        <h4>Lista Ordenada Alfabetica:</h4>
+        <li>Leite</li>
+        <li>Ovos</li>
+        <li>Sal</li>
+    </ol>
+
+    <ol type="I">
+        <h4>Lista Ordenada Romana:</h4>
+        <li>Queijo</li>
+        <li>Pão</li>
+        <li>Patê</li>
+    </ol>
+
+
+    <ul>
+      <h4>Lista Desordenada:</h4>
+      <li>item 1</li>
+      <li>item 2</li>
+      <li>item 3</li>
+      <li>item 4</li>
+    </ul>
+
+    <table border>
+      <th>Titulo da 1 coluna</th>
+      <th>Titulo da 2 coluna</th>
+      <th>Titulo da 3 coluna</th>
+      <tr>
+        <td>coluna 1</td>
+        <td>coluna 2</td>
+        <td>coluna 3</td>
+      </tr>
+      <tr>
+        <td>coluna 1</td>
+        <td>coluna 2</td>
+        <td>coluna 3</td>
+      </tr>
+    </table>
+  </body>
 </html>
