chore: organiza pasta assets

--- a/html/aula02/index.html
+++ b/html/aula02/index.html
@@ -60,15 +60,21 @@
         <h2>Imagens</h2>
         <h3>Tag img</h3>
         <img
-          src="./imagens/caminho.jpg"
+          src="../assets/imagens/caminho.jpg"
           alt="Caminho entre árvores"
           title="Caminho"
         />
         <picture>
-          <source media="(min-width: 650px)" srcset="./imagens/caminho.jpg" />
-          <source media="(min-width: 465px)" srcset="./imagens/imgMedia.jpg" />
+          <source
+            media="(min-width: 650px)"
+            srcset="../assets/imagens/caminho.jpg"
+          />
+          <source
+            media="(min-width: 465px)"
+            srcset="../assets/imagens/imgMedia.jpg"
+          />
           <img
-            src="./imagens/imgPequena.jpg"
+            src="../assets/imagens/imgPequena.jpg"
             alt="Cozinha"
             style="width: auto"
           />
