--- a/html/aula06/index.html
+++ b/html/aula06/index.html
@@ -51,6 +51,7 @@
         </figure>
         <figure class="figura">
           <img
+            class="desfocado"
             src="../assets/imagens/caminho.jpg"
             alt="caminho entre árvores"
             title="Caminho desfocado"
@@ -59,6 +60,7 @@
         </figure>
         <figure class="figura">
           <img
+            class="sombra"
             src="../assets/imagens/caminho.jpg"
             alt="caminho entre árvores"
             title="Caminho com sombra"
@@ -67,7 +69,7 @@
         </figure>
       </div>
     </section>
-    <footer>
+    <footer class="rodape">
       <p>
         &copy; Todos os direitos reservados.<br />Desenvolvido por Gabriel Lima
         Ltda.
