--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <ul>
-      <li><a href="./aula01/">AULA 1</a></li>
-      <li><a href="./aula02/">AULA 2</a></li>
-      <li><a href="./aula03/">AULA 3</a></li>
-      <li><a href="./aula04/">AULA 4</a></li>
-      <li><a href="./aula05/">AULA 5</a></li>
-      <li><a href="./aula06/">AULA 6</a></li>
-      <li><a href="./aula07/">AULA 7</a></li>
+      <li><a href="./html/aula01/index.html">AULA 1</a></li>
+      <li><a href="./html/aula02/index.html">AULA 2</a></li>
+      <li><a href="./html/aula03/index.html">AULA 3</a></li>
+      <li><a href="./html/aula04/index.html">AULA 4</a></li>
+      <li><a href="./html/aula05/index.html">AULA 5</a></li>
+      <li><a href="./html/aula06/index.html">AULA 6</a></li>
+      <li><a href="./html/aula07/index.html">AULA 7</a></li>
     </ul>
   </body>
 </html>
