feat: conclui aula 07

--- a/html/aula07/index.html
+++ b/html/aula07/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aula 07</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="exemplo">
@@ -13,24 +14,24 @@
       <div class="div1">Div 1</div>
       <div class="div2">Div 2</div>
       <div class="div3">Div 3</div>
-      <div class="texto">
-        <h2>Texto Float</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam et
-          vel at blanditiis sed ipsam ab optio pariatur quam expedita odio alias
-          earum nulla dicta praesentium, deserunt exercitationem ipsa officiis?
-        </p>
-        <p>
-          <img
-            src="../assets/imagens/caminho.jpg"
-            alt="caminho entre árvores"
-            title="caminho"
-          />
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque
-          quisquam consequatur et sunt eum iure dolorem nulla, harum nesciunt
-          culpa suscipit amet, eos temporibus vel ea magnam? Ab, consectetur.
-        </p>
-      </div>
+    </div>
+    <div class="texto">
+      <h2>Texto Float</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam et vel
+        at blanditiis sed ipsam ab optio pariatur quam expedita odio alias earum
+        nulla dicta praesentium, deserunt exercitationem ipsa officiis?
+      </p>
+      <p>
+        <img
+          src="../assets/imagens/caminho.jpg"
+          alt="caminho entre árvores"
+          title="caminho"
+        />
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque
+        quisquam consequatur et sunt eum iure dolorem nulla, harum nesciunt
+        culpa suscipit amet, eos temporibus vel ea magnam? Ab, consectetur.
+      </p>
     </div>
   </body>
 </html>
