feat: arrumando links no index geral

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Aulas - HOME</title>
   </head>
   <body>
+    <h3>Aulas:</h3>
     <ul>
       <li><a href="./html/aula01/index.html">AULA 1</a></li>
       <li><a href="./html/aula02/index.html">AULA 2</a></li>
@@ -15,6 +16,15 @@
       <li><a href="./html/aula05/index.html">AULA 5</a></li>
       <li><a href="./html/aula06/index.html">AULA 6</a></li>
       <li><a href="./html/aula07/index.html">AULA 7</a></li>
+      <li><a href="./html/aula07/index.html">AULA 8</a></li>
+      <li><a href="./html/aula07/index.html">AULA 9</a></li>
+    </ul>
+    <hr />
+    <h3>Atividades:</h3>
+    <ul>
+      <li>
+        <a href="./html/atividade-curriculo/index.html">Atividade Currículo</a>
+      </li>
     </ul>
   </body>
 </html>
