--- a/html/atividade-cadastro-pessoas/index.html
+++ b/html/atividade-cadastro-pessoas/index.html
@@ -18,52 +18,54 @@
           <input type="text" name="nome" id="nome" maxlength="40" size="40" />
         </p>
 
-        <input type="radio" id="tipo1" name="tipo" value="cpf" />
-        <label for="tipo">CPF</label><br />
-        <input type="radio" id="tipo2" name="tipo" value="cnpj" />
-        <label for="tipo2">CNPJ</label><br />
+        <input type="radio" id="tipo1" name="tipo" value="Pessoa Física" />
+        <label for="tipo1">Pessoa Física</label><br />
+        <input type="radio" id="tipo2" name="tipo" value="Pessoa Jurídica" />
+        <label for="tipo2">Pessoa Jurídica</label><br />
 
-        <p>
-          CPF:
-          <input
-            type="text"
-            id="cpf"
-            name="cpf"
-            oninput="formataCPF(this)"
-            placeholder="Somente números"
-          />
-        </p>
-
-        <p>
+        <p name="cnpj" id="cnpj">
           CNPJ:
           <input
             type="text"
-            name="cnpj"
-            id="cnpj"
             oninput="mascaraCNPJ(this)"
             placeholder="Somente números"
+            name="cnpji"
+            id="cnpji"
           />
         </p>
+        <div id="divCPF" name="divCPF">
+          <p>
+            CPF:
+            <input
+              type="text"
+              id="cpf"
+              name="cpf"
+              oninput="formataCPF(this)"
+              placeholder="Somente números"
+            />
+          </p>
 
-        <p>
-          Estado Civil
-          <select name="estado-civil" id="estado-civil">
-            <option value="">Selecione...</option>
-            <option value="solteiro">Solteiro</option>
-            <option value="Casado">Casado</option>
-            <option value="Separado">Separado</option>
-            <option value="Divorciado">Divorciado</option>
-            <option value="Viúvo">Viúvo</option>
-          </select>
-        </p>
+          <p>
+            Estado Civil
+            <select name="estadoCivil" id="estadoCivil">
+              <option value="">Selecione...</option>
+              <option value="solteiro">Solteiro</option>
+              <option value="Casado">Casado</option>
+              <option value="Separado">Separado</option>
+              <option value="Divorciado">Divorciado</option>
+              <option value="Viúvo">Viúvo</option>
+            </select>
+          </p>
 
-        <p>
-          Sexo:
-          <input type="radio" id="sexo1" name="sexo" value="masculino" />
-          <label for="tipo">Masculino</label><br />
-          <input type="radio" id="sexo2" name="sexo" value="feminino" />
-          <label for="tipo2">Feminino</label><br />
-        </p>
+          <p>
+            Sexo:
+            <br />
+            <input type="radio" id="sexo1" name="sexo" value="Masculino" />
+            <label for="tipo">Masculino</label><br />
+            <input type="radio" id="sexo2" name="sexo" value="Feminino" />
+            <label for="tipo2">Feminino</label><br />
+          </p>
+        </div>
 
         <p>
           E-mail:
@@ -110,5 +112,6 @@
         <input type="reset" value="Limpa Form." />
       </form>
     </div>
+    <script src="JS/Pessoa.js"></script>
   </body>
 </html>
