feat: pontuação do jogo

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <li>
         <a href="./html/atividade-curriculo/index.html">Atividade Currículo</a>
       </li>
+      <li><a href="./html/Aula17-JogoMario/index.html"> JOGO MARIO</a></li>
     </ul>
   </body>
 </html>
